--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="h-100">
-  <app-root class="h-100"></app-root>
+<body>
+  <app-root></app-root>
 </body>
 
 </html>
